<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/backnormal"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".Create_Hints$1" >

    <TextView
        android:id="@+id/textRecord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/record_text"
        android:text="@string/record_text"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ImageButton
        android:id="@+id/imageButtonrecord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/record"
        android:contentDescription="@string/record" />

    <LinearLayout
        android:id="@+id/horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal" >

        <ImageButton
            android:id="@+id/imageButtonrecord_play"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/record_play"
            android:contentDescription="@string/record_play" />

        <ImageButton
            android:id="@+id/imageButtonrecord_stop"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="right"
            android:background="@drawable/record_stop"
            android:contentDescription="@string/record_stop" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <Button
            android:id="@+id/AudioSave"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save" />

        <Button
            android:id="@+id/AudioImport"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/import_" />
    </LinearLayout>

</LinearLayout>