<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
	android:background="@drawable/backhints"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="at.mms.hot_cold.Create_Hints$PlaceholderFragment" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        tools:ignore="UselessParent" >

        <EditText
            android:id="@+id/HintName"
            android:layout_width="match_parent"
            android:layout_height="31dp"
            android:ems="10"
            android:inputType="none"
            android:text="@string/hintnumber"
            android:textColor="@color/Black"
            android:textSize="@dimen/activity_vertical_margin" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/buttonFixCoordinates"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="64dp"
                android:layout_height="61dp"
                android:background="@drawable/coord" />

            <TextView
                android:id="@+id/Coordinates"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:freezesText="false"
                android:text="@string/coord" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="240dp"
            android:layout_height="67dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal" >

            <ImageButton
                android:id="@+id/imageButtonAudio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/audio"
                android:contentDescription="@string/audio"
                android:onClick="Audio" />

            <ImageButton
                android:id="@+id/imageButtonPicture"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.28"
                android:contentDescription="@string/picture"
            	android:background="@drawable/camera"/>

            <ImageButton
                android:id="@+id/imageButtonText"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.33333"
                android:contentDescription="@string/text"
            	android:background="@drawable/message"
                 />
        </LinearLayout>

        <TextView
            android:id="@+id/textHint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.09"
            android:visibility="invisible" />
	<TextView
            android:id="@+id/audioHint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.09"
            android:visibility="invisible" />
        <ImageView
            android:id="@+id/imageViewHint"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.63"
            android:src="@drawable/abc_ic_clear"
            android:visibility="invisible" android:contentDescription="@string/picture"/>

        <Button
            android:id="@+id/createNewHint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save" />

    </LinearLayout>

</RelativeLayout>